--- a/box_model.html
+++ b/box_model.html
@@ -14,4 +14,11 @@
     <div class="box"></div>
     <div class="bigSpace"></div>
     <!-- <div class="prompt">
-      <span style="float: right; margin-
+      <span style="float: right; margin-right: 5px; margin-top: 5px">x</span>
+      <h1>Title</h1>
+    </div> -->
+    <div class="bottomMenu">
+      <div class="chatPrompt">Example</div>
+    </div>
+  </body>
+</html>
