--- a/grid.html
+++ b/grid.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grid</title>
-    <link rel="stylesheet" href="grid.css" />
+    <link rel="stylesheet" href="./grid.css" />
   </head>
   <body>
     <header>
@@ -27,11 +27,11 @@
       <aside class="left">Sample</aside>
       <article class="center">
         <div class="searchBar">
-          <img src="/images/search.svg" alt="search icon" />
+          <img src="./images/search.svg" alt="search icon" />
           <input type="text" />
           <div class="actions">
-            <img src="/images/mic.png" alt="mic" />
-            <img src="/images/cam.png" alt="cam" />
+            <img src="./images/mic.png" alt="mic" />
+            <img src="./images/cam.png" alt="cam" />
           </div>
         </div>
       </article>
